(library
  (name gbm)
  (public_name gbm)
  (libraries ctypes ctypes.foreign fmt libdrm)
  (foreign_stubs
    (language c)
    (names stubs))
  (c_library_flags (:include c_library_flags.sexp))
  (ctypes
    (external_library_name libgbm)
    (build_flags_resolver
      ; Unlike dune-configurator, dune's cstubs support doesn't work with pkgconf,
      ; so get the flags via configurator instead:
      (vendored
        (c_flags :standard (:include c_flags.sexp))
        (c_library_flags :standard (:include c_library_flags.sexp))))
    (headers (include "gbm.h"))
    (type_description
      (instance Types)
      (functor Type_description))
    (function_description
      (instance Functions)
      (errno_policy return_errno)
      (functor Function_description))
    (generated_types Types_generated)
    (generated_entry_point C)))

(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (action (run ./config/discover.exe)))
